Fix text overflow of all pages

--- a/src/Components/FoodItem.css
+++ b/src/Components/FoodItem.css
@@ -5,6 +5,7 @@
   border-radius: 8px;
   display: inline-flex;
   align-items: center;
+  white-space: nowrap;
   box-shadow: 0px 2px 2px -1px rgba(0, 0, 0, 0.25);
   margin-bottom: 12px;
 }
@@ -16,6 +17,7 @@
   border-radius: 8px;
   display: inline-flex;
   align-items: center;
+  white-space: nowrap;
   box-shadow: 0px 2px 2px -1px rgba(0, 0, 0, 0.25);
   margin-bottom: 12px;
 }
@@ -37,6 +39,19 @@
   font-size: 16px;
   line-height: 18px;
   color: #323232;
+  max-width: 200px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+.searchRestaurant {
+  margin: 11px 0px 10px 16px;
+  font-size: 16px;
+  line-height: 18px;
+  color: #323232;
+  max-width: 90px;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .date {
@@ -51,6 +66,19 @@
   line-height: 14px;
   color: #a7a37e;
   margin: 14px auto 11px 5px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  max-width: 180px;
+}
+
+.searchFood {
+  font-size: 12px;
+  line-height: 14px;
+  color: #a7a37e;
+  margin: 14px auto 11px 5px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  max-width: 60px;
 }
 
 .smallFood {
